--- a/silver_network/views/silver_box_views.xml
+++ b/silver_network/views/silver_box_views.xml
@@ -16,9 +16,7 @@
                     <field name="name"/>
                     <field name="capacity_nap"/>
                     <field name="capacity_usage_nap"/>
-                    <field name="country_id"/>
-                    <field name="state_id"/>
-                    <field name="street"/>
+                    <field name="silver_address_id"/>
                 </tree>
             </field>
         </record>
@@ -44,6 +42,7 @@
                                        modifiers="{&quot;readonly&quot;: true}"/>
                                 <field name="node_id" invisible="1" can_create="true" can_write="true"
                                        modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
+                                <field name="silver_address_id" />
                             </group>
                             <group string="Capacidad NAP">
                                 <field name="capacity_nap" />
@@ -51,19 +50,19 @@
                             </group>
                         </group>
 
-                        <group string="Datos Ubicacion">
+                        <!--group string="Datos Ubicacion">
                             <group>
                                 <field name="country_id" can_create="false" can_write="false" />
                                 <field name="state_id" can_create="true" can_write="true" />
-                                <!--field name="zip"/-->
+
                             </group>
                             <group>
                                 <field name="street" />
                                 <field name="street2" />
                             </group>
-                        </group>
+                        </group-->
                         <group>
-                            <group string="Geolocalizacion">
+                            <!--group string="Geolocalizacion">
                                 <label for="date_localization" string="Geolocalizacion"/>
                                 <div>
                                     <span>Lat :</span>
@@ -76,11 +75,12 @@
                                         Actualizado el:
                                     </span>
                                     <field name="date_localization" nolabel="1" class="oe_inline" />
-                                    <field name="is_line_nap" widget="boolean_toggle" invisible="1"/>
+
                                 </div>
-                            </group>
+                            </group-->
                             <group name="vlan_port" string="Vlan Administrativa" invisible="is_line_nap==False"
                                  >
+                                <field name="is_line_nap" widget="boolean_toggle" invisible="1"/>
                                 <field name="s_vlan" />
                                 <field name="c_vlan" />
                             </group>
