--- a/silver_base/views/silver_address_views.xml
+++ b/silver_base/views/silver_address_views.xml
@@ -40,7 +40,7 @@
                                 <field name="floor"/>
                                 <field name="house_number"/>
                             </group>
-                            <group string="Coordinates">
+                            <group string="Coordinates" name="coordinates_group">
                                 <field name="latitude"/>
                                 <field name="longitude"/>
                             </group>
