--- a/silver_network/views/silver_olt_views.xml
+++ b/silver_network/views/silver_olt_views.xml
@@ -6,7 +6,23 @@
             <field name="name">Equipos OLT</field>
             <field name="res_model">silver.olt</field>
             <field name="view_mode">tree,form</field>
+             <field name="context">{'search_default_group_by_node_id': 1}</field>
         </record>
+
+    <record id="view_olt_search" model="ir.ui.view">
+        <field name="name">silver.olt.search.view</field>
+        <field name="model">silver.olt</field>
+        <field name="arch" type="xml">
+            <search string="Equipos OLT">
+                <field name="name"/>
+                <field name="node_id" />
+                <group expand="1" string="Group By">
+                    <filter name="group_by_node_id" string="Nodo" domain="[]"  context="{'group_by':'node_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record>
+
 
         <record id="view_silver_olt_tree" model="ir.ui.view">
             <field name="name">silver.olt.tree</field>
