--- a/silver_network/views/silver_splitter_views.xml
+++ b/silver_network/views/silver_splitter_views.xml
@@ -44,6 +44,7 @@
                         <group>
                             <group>
                                 <field name="name" invisible="type_splitter != '2'"/>
+                                <field name="silver_address_id" />
                                 <field name="capacity_splitter"/>
                                 <field name="port_splitter" invisible="type_splitter == '1'"/>
                             </group>
